# docker-statistics-ui

./: .gitignore  Cargo.toml  Dioxus.toml  Dockerfile  READEME.md  README.md
.github/workflows/: release.yml
assets/: app.css
libs/icon-packages/lib/src/: icon_component.rs  lib.rs
libs/icon-packages/lib/src/icons/: bs_icons.rs  fa_brands_icons.rs  fa_regular_icons.rs  fa_solid_icons.rs  fi_icons.rs  go_icons.rs  hi_outline_icons.rs  hi_solid_icons.rs  io_icons.rs  md_action_icons.rs  md_alert_icons.rs  md_av_icons.rs  md_communication_icons.rs  md_content_icons.rs  md_device_icons.rs  md_editor_icons.rs  md_file_icons.rs  md_hardware_icons.rs  md_home_icons.rs  md_image_icons.rs  md_maps_icons.rs  md_navigation_icons.rs  md_notification_icons.rs  md_places_icons.rs  md_social_icons.rs  md_toggle_icons.rs
src/: main.rs  models.rs  selected_vm.rs  settings.rs  ssh_certs_cache.rs  ssh_settings.rs  static_resources.rs  utils.rs
src/app_ctx/: app_ctx.rs  data_cache.rs  data_cache_by_env.rs  metrics_cache.rs  metrics_history.rs  metrics_history_cache.rs  mod.rs
src/background/: metrics_collector_timer.rs  mod.rs  update_metrics_cache_timer.rs
src/http_client/: get_logs.rs  get_statistics.rs  mod.rs
src/models/: mod.rs  models.rs  vm_model.rs
src/server/: mod.rs  settings.rs  ssh_settings.rs
src/server/app/: app_ctx.rs  data_cache.rs  data_cache_by_env.rs  mod.rs  ssh_private_key_resolver.rs
src/server/app_ctx/: app_ctx.rs  data_cache.rs  metrics_history.rs  mod.rs
src/server/background/: update_metrics_cache_timer.rs
src/server/http_client/: get_logs.rs  get_statistics.rs
src/states/: dialog_state.rs  main_state.rs  mod.rs  selected_vm.rs
src/views/: containers_list.rs  icons.rs  left_panel.rs  mod.rs  prompt_ssh_pass_key.rs  render_cpu_graph.rs  render_mem_graph.rs  right_panel.rs  secrets_list.rs
src/views/dialog/: mod.rs  render.rs  show_logs.rs
