[package]
name = "docker-statistics-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
server = [
    "dioxus/axum",
    "rust-extensions/with-tokio",
    "my-logger",
    "async-trait",
    "futures",
    "lazy_static",
    "serde_json",
    "serde_yaml",
    "flurl",
    "tokio/full",

]
web = ["dioxus/web"]

[dependencies]
rust-extensions = { tag = "0.1.4", git = "https://github.com/MyJetTools/rust-extensions.git" }
my-logger = { tag = "1.1.0", git = "https://github.com/MyJetTools/my-logger.git", optional = true }

dioxus = { version = "0.5", features = ["fullstack", "router"] }
serde = "*"
chrono = "*"


dioxus-free-icons = { path = "./libs/icon-packages/lib", features = [
    "bootstrap",
    "ionicons",
] }

dioxus-utils = { tag = "0.1.0", git = "https://github.com/MyJetTools/dioxus-utils.git", features = [
    "fullstack",
] }

tokio = { version = "*", features = ["time", "rt"] }
serde_json = { version = "*", optional = true }
serde_yaml = { version = "*", optional = true }
futures = { version = "*", optional = true }
async-trait = { version = "*", optional = true }
lazy_static = { version = "*", optional = true }
base64 = { version = "*" }
flurl = { tag = "0.5.2", git = "https://github.com/MyJetTools/fl-url.git", features = [
    "with-ssh",
], optional = true }
