[package]
name = "docker-statistics-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["server"]
server = [
    "dioxus/server",
    "rust-extensions/with-tokio",
    "my-logger",
    "async-trait",
    "futures",
    "lazy_static",
    "serde_json",
    "serde_yaml",
    "flurl",
    "tokio/full",
    "my-settings-reader",
    "my-ssh",
    "dioxus-utils/server",

]
web = ["dioxus/web"]

[dependencies]

rust-extensions = { tag = "0.1.5", git = "https://github.com/MyJetTools/rust-extensions.git", features = [
    "hex",
    "base64",
] }
my-logger = { tag = "1.2.1", git = "https://github.com/MyJetTools/my-logger.git", optional = true }


tokio = { version = "*", features = ["time", "rt"] }

dioxus = { version = "0.6", features = ["fullstack", "router"] }
serde = "*"
dioxus-utils = { tag = "0.6.0", git = "https://github.com/MyJetTools/dioxus-utils.git", features = [
    "fullstack",
] }
dioxus-shared = { tag = "0.6.0", git = "https://github.com/MyJetTools/dioxus-shared.git" }
chrono = "*"
dioxus-free-icons = { path = "./libs/icon-packages/lib", features = [
    "bootstrap",
    "ionicons",
] }
serde_json = { version = "*", optional = true }
serde_yaml = { version = "*", optional = true }
futures = { version = "*", optional = true }
async-trait = { version = "*", optional = true }
lazy_static = { version = "*", optional = true }
base64 = { version = "*" }
flurl = { tag = "0.6.1", git = "https://github.com/MyJetTools/fl-url.git", features = [
    "with-ssh",
], optional = true }

my-settings-reader = { tag = "0.4.1", git = "https://github.com/MyJetTools/my-settings-reader.git", optional = true }

my-ssh = { tag = "0.1.2", git = "https://github.com/MyJetTools/my-ssh.git", optional = true }

ansi-to-html = "*"
[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
